# mcp-aws-gcp-orchestrator

./: LICENSE
mcp-aws-gcp-orchestrator/: CONTRIBUTING.md  README.md  pyproject.toml  start-dev.sh
mcp-aws-gcp-orchestrator/backend/: main.py
mcp-aws-gcp-orchestrator/docs/: API.md  DEVELOPMENT.md
mcp-aws-gcp-orchestrator/examples/: basic_usage.py
mcp-aws-gcp-orchestrator/frontend/: package-lock.json  package.json
mcp-aws-gcp-orchestrator/frontend/public/: index.html
mcp-aws-gcp-orchestrator/frontend/src/: App.css  App.js
mcp-aws-gcp-orchestrator/frontend/src/components/: QueryInput.js  QueryResults.js
mcp-aws-gcp-orchestrator/src/mcp_orchestrator/: __init__.py  aws_gcp_orchestrator.py  config.py
mcp-aws-gcp-orchestrator/tests/: test_orchestrator.py
